--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "dotenv": "^14.3.2",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "pdfkit": "^0.13.0",
+    "pug": "^3.0.2",
+    "webrtc": "^1.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
