updated with fixes

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 TOKEN_SECRET = 'CSM_MANAGEMENT_SYSTEM_CSM_MANAGEMENT_SYSTEM';
-ID_JUNIORCLASS = 'JuFl@00'
-ID_SENIORCLASS = 'SnFl@00'
+ID_JUNIORCLASS = 'Jncl'
+ID_SENIORCLASS = 'Sncl'
+
+ID_JUNIOR1 = '001'
+ID_JUNIOR2 = '002'
+ID_JUNIOR3 = '003'
+
+ID_SENIOR1 = '001'
+ID_SENIOR2 = '002'
+ID_SENIOR3 = '003'
+
+
