update with new modules

--- a/.env
+++ b/.env
@@ -10,4 +10,12 @@ ID_SENIOR1 = '001'
 ID_SENIOR2 = '002'
 ID_SENIOR3 = '003'
 
+ID_TEACHER_JUNIOR1 = 'TJSC01'
+ID_TEACHER_JUNIOR2 = 'TJSC02'
+ID_TEACHER_JUNIOR3 = 'TJSC03'
+
+ID_TEACHER_SENIOR1 = 'TSSC01'
+ID_TEACHER_SENIOR2 = 'TSSC02'
+ID_TEACHER_SENIOR3 = 'TSSC03'
+
 
