--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "school_management_system",
   "version": "1.0.0",
-  "description": "\"A broad and simple management system for any secondary and primary school, which contains all aid to student and staff data",
+  "description": "\"A broad and simple management system for any secondary school, which contains all aid to student and staff data",
   "scripts": {
-    "build": "node server.js",
+    "serve": "node server.js",
     "start": "nodemon server.js"
   },
   "main": "server.js",
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "pdfkit": "^0.13.0",
