--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ ID_TEACHER_SENIOR1 = 'TSSC01'
 ID_TEACHER_SENIOR2 = 'TSSC02'
 ID_TEACHER_SENIOR3 = 'TSSC03'
 
-
+MONGO_URL = "mongodb+srv://uty:user1uty@studentform.o0has.mongodb.net/chrisean_global?retryWrites=true&w=majority"
